# galaxy_simulator

./: .gitignore  CMakeLists.txt  launch_test.sh  main.cpp  plot_energy.gp
libsim/: CMakeLists.txt
libsim/include/: simulator.hpp
libsim/src/: simulator.cpp
libsim/tests/: test_runner.cpp
results/: Leapfrog_energy.csv
sketch_260130b/: sketch_260130b.pde
